--- a/proc/solve_boundaryandadjacency.html
+++ b/proc/solve_boundaryandadjacency.html
@@ -125,6 +125,7 @@
     <h2>public subroutine solve_BoundaryAndAdjacency(cellVertices, cellBoundFaces, boundFaceVertices, adjacentCellArray)</h2>
     
 
+    <p>境界面と隣接関係を、それぞれ配列に格納</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
