--- a/type/adjacencysolver.html
+++ b/type/adjacencysolver.html
@@ -133,7 +133,7 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: AdjacencySolver</h2>
-    
+    <p>隣接関係ソルバークラス</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherits</h3>
