--- a/proc/get_cellcenters.html
+++ b/proc/get_cellcenters.html
@@ -125,6 +125,7 @@
     <h2>public function get_cellCenters(node, cell) result(centers)</h2>
     
 
+    <p>すべてのセル重心を計算し、配列で返す</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
