--- a/proc/get_minmaxcdn.html
+++ b/proc/get_minmaxcdn.html
@@ -125,6 +125,7 @@
     <h2>public function get_MinMaxCDN(node) result(MinMax)</h2>
     
 
+    <p>節点群の座標の最大最小を返す</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
