--- a/proc/real2content.html
+++ b/proc/real2content.html
@@ -125,6 +125,7 @@
     <h2>public function real2content(real_array) result(content_array)</h2>
     
 
+    <p>実数型配列をコンテンツ配列に変換する</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
