--- a/type/basicparameter.html
+++ b/type/basicparameter.html
@@ -142,7 +142,8 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: BasicParameter</h2>
-    
+    <p>基礎変数クラス
+時間間隔や代表値を格納</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherited by</h3>
