--- a/type/cell_t.html
+++ b/type/cell_t.html
@@ -130,7 +130,7 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: cell_t</h2>
-    
+    <p>セル構造体（節点のID配列）</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherited by</h3>
