--- a/type/conditionvalue_t.html
+++ b/type/conditionvalue_t.html
@@ -156,7 +156,8 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: conditionValue_t</h2>
-    
+    <p>条件値クラス
+条件指定ファイル（namelist）を読み込んだ結果を格納する</p>
     <br>
 
     <section class="visible-xs visible-sm hidden-md">
