--- a/type/content_t.html
+++ b/type/content_t.html
@@ -131,7 +131,8 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: content_t</h2>
-    
+    <p>コンテンツ構造体
+実数とIDをメンバに持つ</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherited by</h3>
