--- a/type/dropletequationsolver.html
+++ b/type/dropletequationsolver.html
@@ -158,7 +158,8 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public, extends(<a href='../type/basicparameter.html'>BasicParameter</a>) :: DropletEquationSolver</h2>
-    
+    <p>飛沫方程式ソルバクラス
+蒸発方程式や運動方程式を解くメソッドを保持</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherits</h3>
