--- a/type/heaptree.html
+++ b/type/heaptree.html
@@ -132,7 +132,9 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: HeapTree</h2>
-    
+    <p>ヒープ木クラス
+実体は単なる配列だがツリー構造を表現している
+要素 i に注目すると、親ノードは要素 i/2(小数切り捨て) であり、子ノードは要素 2i, 2i + 1 である</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherits</h3>
