--- a/type/node_t.html
+++ b/type/node_t.html
@@ -130,7 +130,7 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: node_t</h2>
-    
+    <p>節点構造体（ただの座標配列）</p>
 <br>    <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Inherited by</h3>
