--- a/module/conditionvalue_m.html
+++ b/module/conditionvalue_m.html
@@ -168,35 +168,35 @@
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M163.42,-125.97C156.7,-123.08 149.58,-119.97 143,-117 124.86,-108.81 104.81,-99.33 88.39,-91.45"/>
 <polygon fill="#000000" stroke="#000000" points="89.71,-88.2 79.18,-87.02 86.67,-94.51 89.71,-88.2"/>
 </g>
-<!-- program~dropletcount -->
-<g id="module~~conditionvalue_m~~UsedByGraph_node3" class="node">
-<title>program~dropletcount</title>
-<g id="a_module~~conditionvalue_m~~UsedByGraph_node3"><a xlink:href=".././program/dropletcount.html" xlink:title="dropletCount">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="234,-108 152,-108 152,-84 234,-84 234,-108"/>
-<text text-anchor="middle" x="193" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">dropletCount</text>
-</a>
-</g>
-</g>
-<!-- program~dropletcount&#45;&gt;module~conditionvalue_m -->
-<g id="module~~conditionvalue_m~~UsedByGraph_edge2" class="edge">
-<title>program~dropletcount&#45;&gt;module~conditionvalue_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M151.86,-89.87C141.07,-88.22 129.13,-86.4 117.43,-84.61"/>
-<polygon fill="#000000" stroke="#000000" points="117.64,-81.1 107.23,-83.05 116.59,-88.02 117.64,-81.1"/>
-</g>
 <!-- program~boxflowfield -->
-<g id="module~~conditionvalue_m~~UsedByGraph_node4" class="node">
+<g id="module~~conditionvalue_m~~UsedByGraph_node3" class="node">
 <title>program~boxflowfield</title>
-<g id="a_module~~conditionvalue_m~~UsedByGraph_node4"><a xlink:href=".././program/boxflowfield.html" xlink:title="boxFlowField">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="233,-66 153,-66 153,-42 233,-42 233,-66"/>
-<text text-anchor="middle" x="193" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">boxFlowField</text>
+<g id="a_module~~conditionvalue_m~~UsedByGraph_node3"><a xlink:href=".././program/boxflowfield.html" xlink:title="boxFlowField">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="233,-108 153,-108 153,-84 233,-84 233,-108"/>
+<text text-anchor="middle" x="193" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">boxFlowField</text>
 </a>
 </g>
 </g>
 <!-- program~boxflowfield&#45;&gt;module~conditionvalue_m -->
-<g id="module~~conditionvalue_m~~UsedByGraph_edge3" class="edge">
+<g id="module~~conditionvalue_m~~UsedByGraph_edge2" class="edge">
 <title>program~boxflowfield&#45;&gt;module~conditionvalue_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M152.97,-59.96C141.86,-61.66 129.48,-63.55 117.34,-65.4"/>
-<polygon fill="#000000" stroke="#000000" points="116.6,-61.98 107.24,-66.95 117.65,-68.9 116.6,-61.98"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M152.97,-90.04C141.86,-88.34 129.48,-86.45 117.34,-84.6"/>
+<polygon fill="#000000" stroke="#000000" points="117.65,-81.1 107.24,-83.05 116.6,-88.02 117.65,-81.1"/>
+</g>
+<!-- program~dropletcount -->
+<g id="module~~conditionvalue_m~~UsedByGraph_node4" class="node">
+<title>program~dropletcount</title>
+<g id="a_module~~conditionvalue_m~~UsedByGraph_node4"><a xlink:href=".././program/dropletcount.html" xlink:title="dropletCount">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="234,-66 152,-66 152,-42 234,-42 234,-66"/>
+<text text-anchor="middle" x="193" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">dropletCount</text>
+</a>
+</g>
+</g>
+<!-- program~dropletcount&#45;&gt;module~conditionvalue_m -->
+<g id="module~~conditionvalue_m~~UsedByGraph_edge3" class="edge">
+<title>program~dropletcount&#45;&gt;module~conditionvalue_m</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M151.86,-60.13C141.07,-61.78 129.13,-63.6 117.43,-65.39"/>
+<polygon fill="#000000" stroke="#000000" points="116.59,-61.98 107.23,-66.95 117.64,-68.9 116.59,-61.98"/>
 </g>
 <!-- program~droplet2csv -->
 <g id="module~~conditionvalue_m~~UsedByGraph_node5" class="node">
@@ -304,6 +304,8 @@
      <div class="panel panel-default">
   <div class="panel-heading codesum"><span class="anchor" id="type-conditionvalue_t"></span><h3>type, public :: <a href='../type/conditionvalue_t.html'>conditionValue_t</a>  </h3></div>
   <div class="panel-body">
+    <p>条件値クラス
+条件指定ファイル（namelist）を読み込んだ結果を格納する</p>
      <h4>Components</h4>
     <table class="table table-striped varlist">
 <thead><tr><th>Type</th><th>Visibility</th><th>Attributes</th><th></th><th>Name</th><th></th><th>Initial</th><th></th></thead>
