--- a/proc/heap_sort.html
+++ b/proc/heap_sort.html
@@ -125,6 +125,7 @@
     <h2>public subroutine heap_sort(array_origin, array_sorted)</h2>
     
 
+    <p>ヒープソート</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
