--- a/proc/simulationsetup.html
+++ b/proc/simulationsetup.html
@@ -130,8 +130,8 @@
       <ul class="list-group">
       <li class="list-group-item">
   <ul class="list-inline">
-    <li><a href='../module/virusdroplet_m.html'>virusDroplet_m</a></li>
     <li><a href='../module/conditionvalue_m.html'>conditionValue_m</a></li>
+    <li><a href='../module/virusdroplet_m.html'>virusDroplet_m</a></li>
   </ul>
       </li>
       <li class="list-group-item">
@@ -152,35 +152,35 @@
 <polygon fill="none" stroke="black" points="243,-45 143,-45 143,-21 243,-21 243,-45"/>
 <text text-anchor="middle" x="193" y="-30.6" font-family="Helvetica,sans-Serif" font-size="10.50">simulationSetUp</text>
 </g>
-<!-- module~virusdroplet_m -->
-<g id="proc~~simulationsetup~~UsesGraph_node2" class="node">
-<title>module~virusdroplet_m</title>
-<g id="a_proc~~simulationsetup~~UsesGraph_node2"><a xlink:href=".././module/virusdroplet_m.html" xlink:title="virusDroplet_m">
-<polygon fill="#337ab7" stroke="#337ab7" points="100,-66 7,-66 7,-42 100,-42 100,-66"/>
-<text text-anchor="middle" x="53.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">virusDroplet_m</text>
-</a>
-</g>
-</g>
-<!-- proc~simulationsetup&#45;&gt;module~virusdroplet_m -->
-<g id="proc~~simulationsetup~~UsesGraph_edge1" class="edge">
-<title>proc~simulationsetup&#45;&gt;module~virusdroplet_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M142.75,-40.52C132.24,-42.13 121.06,-43.83 110.32,-45.47"/>
-<polygon fill="#000000" stroke="#000000" points="109.56,-42.05 100.2,-47.02 110.61,-48.97 109.56,-42.05"/>
-</g>
 <!-- module~conditionvalue_m -->
-<g id="proc~~simulationsetup~~UsesGraph_node3" class="node">
+<g id="proc~~simulationsetup~~UsesGraph_node2" class="node">
 <title>module~conditionvalue_m</title>
-<g id="a_proc~~simulationsetup~~UsesGraph_node3"><a xlink:href=".././module/conditionvalue_m.html" xlink:title="conditionValue_m">
-<polygon fill="#337ab7" stroke="#337ab7" points="107,-24 0,-24 0,0 107,0 107,-24"/>
-<text text-anchor="middle" x="53.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">conditionValue_m</text>
+<g id="a_proc~~simulationsetup~~UsesGraph_node2"><a xlink:href=".././module/conditionvalue_m.html" xlink:title="conditionValue_m">
+<polygon fill="#337ab7" stroke="#337ab7" points="107,-66 0,-66 0,-42 107,-42 107,-66"/>
+<text text-anchor="middle" x="53.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">conditionValue_m</text>
 </a>
 </g>
 </g>
 <!-- proc~simulationsetup&#45;&gt;module~conditionvalue_m -->
-<g id="proc~~simulationsetup~~UsesGraph_edge2" class="edge">
+<g id="proc~~simulationsetup~~UsesGraph_edge1" class="edge">
 <title>proc~simulationsetup&#45;&gt;module~conditionvalue_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M142.75,-25.48C134.44,-24.21 125.72,-22.88 117.12,-21.56"/>
-<polygon fill="#000000" stroke="#000000" points="117.54,-18.09 107.13,-20.04 116.49,-25.01 117.54,-18.09"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M142.75,-40.52C134.44,-41.79 125.72,-43.12 117.12,-44.44"/>
+<polygon fill="#000000" stroke="#000000" points="116.49,-40.99 107.13,-45.96 117.54,-47.91 116.49,-40.99"/>
+</g>
+<!-- module~virusdroplet_m -->
+<g id="proc~~simulationsetup~~UsesGraph_node3" class="node">
+<title>module~virusdroplet_m</title>
+<g id="a_proc~~simulationsetup~~UsesGraph_node3"><a xlink:href=".././module/virusdroplet_m.html" xlink:title="virusDroplet_m">
+<polygon fill="#337ab7" stroke="#337ab7" points="100,-24 7,-24 7,0 100,0 100,-24"/>
+<text text-anchor="middle" x="53.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">virusDroplet_m</text>
+</a>
+</g>
+</g>
+<!-- proc~simulationsetup&#45;&gt;module~virusdroplet_m -->
+<g id="proc~~simulationsetup~~UsesGraph_edge2" class="edge">
+<title>proc~simulationsetup&#45;&gt;module~virusdroplet_m</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M142.75,-25.48C132.24,-23.87 121.06,-22.17 110.32,-20.53"/>
+<polygon fill="#000000" stroke="#000000" points="110.61,-17.03 100.2,-18.98 109.56,-23.95 110.61,-17.03"/>
 </g>
 </g>
 </svg>
@@ -299,50 +299,50 @@
 <path fill="none" stroke="#000000" d="M72.93,-87.04C89.84,-96.03 113.98,-108.23 136,-117 141.02,-119 146.31,-120.93 151.63,-122.76"/>
 <polygon fill="#000000" stroke="#000000" points="150.6,-126.1 161.2,-125.92 152.8,-119.46 150.6,-126.1"/>
 </g>
-<!-- proc~flowfield_ -->
-<g id="proc~~simulationsetup~~CallsGraph_node3" class="node">
-<title>proc~flowfield_</title>
-<g id="a_proc~~simulationsetup~~CallsGraph_node3"><a xlink:href=".././proc/flowfield_.html" xlink:title="FlowField_">
-<polygon fill="#d94e8f" stroke="#d94e8f" points="238.5,-108 171.5,-108 171.5,-84 238.5,-84 238.5,-108"/>
-<text text-anchor="middle" x="205" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">FlowField_</text>
-</a>
-</g>
-</g>
-<!-- proc~simulationsetup&#45;&gt;proc~flowfield_ -->
-<g id="proc~~simulationsetup~~CallsGraph_edge2" class="edge">
-<title>proc~simulationsetup&#45;&gt;proc~flowfield_</title>
-<path fill="none" stroke="#000000" d="M100.25,-81.76C119.86,-84.45 142.21,-87.52 161.14,-90.12"/>
-<polygon fill="#000000" stroke="#000000" points="160.87,-93.61 171.26,-91.51 161.83,-86.68 160.87,-93.61"/>
-</g>
 <!-- proc~dropletgenerator_ -->
-<g id="proc~~simulationsetup~~CallsGraph_node4" class="node">
+<g id="proc~~simulationsetup~~CallsGraph_node3" class="node">
 <title>proc~dropletgenerator_</title>
-<g id="a_proc~~simulationsetup~~CallsGraph_node4"><a xlink:href=".././proc/dropletgenerator_.html" xlink:title="DropletGenerator_">
-<polygon fill="#d94e8f" stroke="#d94e8f" points="261,-66 149,-66 149,-42 261,-42 261,-66"/>
-<text text-anchor="middle" x="205" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">DropletGenerator_</text>
+<g id="a_proc~~simulationsetup~~CallsGraph_node3"><a xlink:href=".././proc/dropletgenerator_.html" xlink:title="DropletGenerator_">
+<polygon fill="#d94e8f" stroke="#d94e8f" points="261,-108 149,-108 149,-84 261,-84 261,-108"/>
+<text text-anchor="middle" x="205" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">DropletGenerator_</text>
 </a>
 </g>
 </g>
 <!-- proc~simulationsetup&#45;&gt;proc~dropletgenerator_ -->
-<g id="proc~~simulationsetup~~CallsGraph_edge3" class="edge">
+<g id="proc~~simulationsetup~~CallsGraph_edge4" class="edge">
 <title>proc~simulationsetup&#45;&gt;proc~dropletgenerator_</title>
-<path fill="none" stroke="#000000" d="M100.25,-68.24C112.45,-66.57 125.72,-64.74 138.56,-62.98"/>
-<polygon fill="#000000" stroke="#000000" points="139.3,-66.41 148.73,-61.59 138.35,-59.48 139.3,-66.41"/>
+<path fill="none" stroke="#000000" d="M100.25,-81.76C112.45,-83.43 125.72,-85.26 138.56,-87.02"/>
+<polygon fill="#000000" stroke="#000000" points="138.35,-90.52 148.73,-88.41 139.3,-83.59 138.35,-90.52"/>
 </g>
 <!-- proc~read_backup -->
-<g id="proc~~simulationsetup~~CallsGraph_node5" class="node">
+<g id="proc~~simulationsetup~~CallsGraph_node4" class="node">
 <title>proc~read_backup</title>
-<g id="a_proc~~simulationsetup~~CallsGraph_node5"><a xlink:href=".././proc/read_backup.html" xlink:title="read_backup">
-<polygon fill="#d94e8f" stroke="#d94e8f" points="245.5,-24 164.5,-24 164.5,0 245.5,0 245.5,-24"/>
-<text text-anchor="middle" x="205" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">read_backup</text>
+<g id="a_proc~~simulationsetup~~CallsGraph_node4"><a xlink:href=".././proc/read_backup.html" xlink:title="read_backup">
+<polygon fill="#d94e8f" stroke="#d94e8f" points="245.5,-66 164.5,-66 164.5,-42 245.5,-42 245.5,-66"/>
+<text text-anchor="middle" x="205" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">read_backup</text>
 </a>
 </g>
 </g>
 <!-- proc~simulationsetup&#45;&gt;proc~read_backup -->
-<g id="proc~~simulationsetup~~CallsGraph_edge4" class="edge">
+<g id="proc~~simulationsetup~~CallsGraph_edge2" class="edge">
 <title>proc~simulationsetup&#45;&gt;proc~read_backup</title>
-<path fill="none" stroke="#000000" d="M72.93,-62.96C89.84,-53.97 113.98,-41.77 136,-33 141.95,-30.63 148.28,-28.36 154.59,-26.24"/>
-<polygon fill="#000000" stroke="#000000" points="156,-29.46 164.43,-23.05 153.84,-22.8 156,-29.46"/>
+<path fill="none" stroke="#000000" d="M100.25,-68.24C117.33,-65.9 136.48,-63.27 153.64,-60.91"/>
+<polygon fill="#000000" stroke="#000000" points="154.6,-64.31 164.03,-59.49 153.65,-57.38 154.6,-64.31"/>
+</g>
+<!-- proc~flowfield_ -->
+<g id="proc~~simulationsetup~~CallsGraph_node5" class="node">
+<title>proc~flowfield_</title>
+<g id="a_proc~~simulationsetup~~CallsGraph_node5"><a xlink:href=".././proc/flowfield_.html" xlink:title="FlowField_">
+<polygon fill="#d94e8f" stroke="#d94e8f" points="238.5,-24 171.5,-24 171.5,0 238.5,0 238.5,-24"/>
+<text text-anchor="middle" x="205" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">FlowField_</text>
+</a>
+</g>
+</g>
+<!-- proc~simulationsetup&#45;&gt;proc~flowfield_ -->
+<g id="proc~~simulationsetup~~CallsGraph_edge3" class="edge">
+<title>proc~simulationsetup&#45;&gt;proc~flowfield_</title>
+<path fill="none" stroke="#000000" d="M72.93,-62.96C89.84,-53.97 113.98,-41.77 136,-33 144.26,-29.71 153.24,-26.61 161.89,-23.85"/>
+<polygon fill="#000000" stroke="#000000" points="162.94,-27.19 171.46,-20.9 160.88,-20.51 162.94,-27.19"/>
 </g>
 <!-- proc~basicparameter_ -->
 <g id="proc~~simulationsetup~~CallsGraph_node6" class="node">
@@ -363,31 +363,31 @@
 <g id="proc~~simulationsetup~~CallsGraph_node7" class="node">
 <title>proc~flowfieldunstructuredgrid_</title>
 <g id="a_proc~~simulationsetup~~CallsGraph_node7"><a xlink:href=".././proc/flowfieldunstructuredgrid_.html" xlink:title="FlowFieldUnstructuredGrid_">
-<polygon fill="#d94e8f" stroke="#d94e8f" points="467,-108 310,-108 310,-84 467,-84 467,-108"/>
-<text text-anchor="middle" x="388.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">FlowFieldUnstructuredGrid_</text>
+<polygon fill="#d94e8f" stroke="#d94e8f" points="467,-24 310,-24 310,0 467,0 467,-24"/>
+<text text-anchor="middle" x="388.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">FlowFieldUnstructuredGrid_</text>
 </a>
 </g>
 </g>
 <!-- proc~flowfield_&#45;&gt;proc~flowfieldunstructuredgrid_ -->
 <g id="proc~~simulationsetup~~CallsGraph_edge6" class="edge">
 <title>proc~flowfield_&#45;&gt;proc~flowfieldunstructuredgrid_</title>
-<path fill="none" stroke="#000000" d="M238.87,-96C255.98,-96 277.8,-96 299.41,-96"/>
-<polygon fill="#000000" stroke="#000000" points="299.65,-99.5 309.65,-96 299.65,-92.5 299.65,-99.5"/>
+<path fill="none" stroke="#000000" d="M238.87,-12C255.98,-12 277.8,-12 299.41,-12"/>
+<polygon fill="#000000" stroke="#000000" points="299.65,-15.5 309.65,-12 299.65,-8.5 299.65,-15.5"/>
 </g>
 <!-- proc~get_dirfrompath -->
 <g id="proc~~simulationsetup~~CallsGraph_node8" class="node">
 <title>proc~get_dirfrompath</title>
 <g id="a_proc~~simulationsetup~~CallsGraph_node8"><a xlink:href=".././proc/get_dirfrompath.html" xlink:title="get_DirFromPath">
-<polygon fill="#d9534f" stroke="#d9534f" points="603,-108 503,-108 503,-84 603,-84 603,-108"/>
-<text text-anchor="middle" x="553" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">get_DirFromPath</text>
+<polygon fill="#d9534f" stroke="#d9534f" points="603,-24 503,-24 503,0 603,0 603,-24"/>
+<text text-anchor="middle" x="553" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">get_DirFromPath</text>
 </a>
 </g>
 </g>
 <!-- proc~flowfieldunstructuredgrid_&#45;&gt;proc~get_dirfrompath -->
 <g id="proc~~simulationsetup~~CallsGraph_edge7" class="edge">
 <title>proc~flowfieldunstructuredgrid_&#45;&gt;proc~get_dirfrompath</title>
-<path fill="none" stroke="#000000" d="M467.42,-96C475.89,-96 484.42,-96 492.62,-96"/>
-<polygon fill="#000000" stroke="#000000" points="492.81,-99.5 502.81,-96 492.81,-92.5 492.81,-99.5"/>
+<path fill="none" stroke="#000000" d="M467.42,-12C475.89,-12 484.42,-12 492.62,-12"/>
+<polygon fill="#000000" stroke="#000000" points="492.81,-15.5 502.81,-12 492.81,-8.5 492.81,-15.5"/>
 </g>
 </g>
 </svg>
