--- a/lists/programs.html
+++ b/lists/programs.html
@@ -86,15 +86,23 @@
 			 <thead><tr><th>Program</th><th>Source File</th><th>Description</th></tr></thead>
 			 <tbody>
 			   <tr><td><a href='../program/boxflowfield.html'>boxFlowField</a></td><td><a href='../sourcefile/boxflowfield.f90.html'>boxFlowField.f90</a></td><td></td></tr>
-			   <tr><td><a href='../program/cellcentercalc_test.html'>cellCenterCalc_test</a></td><td><a href='../sourcefile/cellcentercalc_test.f90.html'>cellCenterCalc_test.f90</a></td><td></td></tr>
-			   <tr><td><a href='../program/cube2usg.html'>CUBE2USG</a></td><td><a href='../sourcefile/cube2usg.f90.html'>CUBE2USG.f90</a></td><td></td></tr>
+			   <tr><td><a href='../program/cellcentercalc_test.html'>cellCenterCalc_test</a></td><td><a href='../sourcefile/cellcentercalc_test.f90.html'>cellCenterCalc_test.f90</a></td><td><p>セル重心計算がうまく行っているかをテストする。
+具体的には、重心をテトラの内外判定にかけている。</p></td></tr>
+			   <tr><td><a href='../program/cube2usg.html'>CUBE2USG</a></td><td><a href='../sourcefile/cube2usg.f90.html'>CUBE2USG.f90</a></td><td><p>CUBE格子上の流速場をVTK非構造格子に載せるプログラム。
+非構造格子上の各格子に対して、CUBE格子上の最近傍節点を探し、対応付けを行う。
+対応する各節点における流速を配列にして、そのままバイナリファイル出力を行う。</p></td></tr>
 			   <tr><td><a href='../program/droplet2csv.html'>droplet2CSV</a></td><td><a href='../sourcefile/droplet2csv.f90.html'>droplet2CSV.f90</a></td><td></td></tr>
 			   <tr><td><a href='../program/dropletcount.html'>dropletCount</a></td><td><a href='../sourcefile/dropletcount.f90.html'>dropletCount.f90</a></td><td></td></tr>
-			   <tr><td><a href='../program/geometry_test.html'>geometry_test</a></td><td><a href='../sourcefile/geometry_test.f90.html'>geometry_test.f90</a></td><td></td></tr>
-			   <tr><td><a href='../program/main.html'>MAIN</a></td><td><a href='../sourcefile/main.f90.html'>main.f90</a></td><td></td></tr>
+			   <tr><td><a href='../program/geometry_test.html'>geometry_test</a></td><td><a href='../sourcefile/geometry_test.f90.html'>geometry_test.f90</a></td><td><p>テトラ内外判定をテストする。
+乱数で発生させた点群に対して判定を行う。
+テスト用のテトラは単純な形状で、平面の方程式から即座に内外判定が行えるので、これと比較してテストする。</p></td></tr>
+			   <tr><td><a href='../program/main.html'>MAIN</a></td><td><a href='../sourcefile/main.f90.html'>main.f90</a></td><td><p>Simulation of Virus-Laden Droplets Behavior in AFDET
+by KIYOTA OGURA(2021/1/10)
+updated by YUTA IDA</p></td></tr>
 			   <tr><td><a href='../program/sort_main_vtk_ver.html'>sort_main_vtk_ver</a></td><td><a href='../sourcefile/sort_main_vtk_ver.f90.html'>sort_main_vtk_ver.f90</a></td><td></td></tr>
-			   <tr><td><a href='../program/sort_test.html'>sort_test</a></td><td><a href='../sourcefile/sort_test.f90.html'>sort_test.f90</a></td><td></td></tr>
-			   <tr><td><a href='../program/translate.html'>translate</a></td><td><a href='../sourcefile/initial_translate.f90.html'>initial_translate.f90</a></td><td></td></tr>
+			   <tr><td><a href='../program/sort_test.html'>sort_test</a></td><td><a href='../sourcefile/sort_test.f90.html'>sort_test.f90</a></td><td><p>ヒープソートの機能テスト</p></td></tr>
+			   <tr><td><a href='../program/translate.html'>translate</a></td><td><a href='../sourcefile/initial_translate.f90.html'>initial_translate.f90</a></td><td><p>全飛沫を、center(x,y)中心にphi[rad]だけ回転させ(z方向には回転しない),全飛沫の中心center(x,y,z)をcenter_translated(X,Y,Z)に移動させるサンプルコード
+ by Hikaru Konishi</p></td></tr>
 			 </tbody></table>
         </div>
       </div>
