--- a/module/kdtree_m.html
+++ b/module/kdtree_m.html
@@ -136,7 +136,8 @@
     </div>
     
     <div class="col-md-9" id='text'>
-    
+    <p>kd-treeモジュール
+by Shohei Kishi, Hikaru Konishi, Tatsuya Miyoshi, Yuta Ida</p>
 <br>        <div class="panel panel-default">
       <div class="panel-heading">
   <h3 class="panel-title">Uses</h3>
