--- a/proc/output_nodeinfo.html
+++ b/proc/output_nodeinfo.html
@@ -125,6 +125,7 @@
     <h2>subroutine output_nodeInfo()</h2>
     
 
+    <p>対応する節点情報をアスキーファイルで出力するサブルーチン</p>
 
     <h3>Arguments</h3>
     <em>None</em>
