--- a/proc/plane_equation.html
+++ b/proc/plane_equation.html
@@ -125,6 +125,7 @@
     <h2>function plane_equation(x, y) result(z)</h2>
     
 
+    <p>テスト用テトラの斜面の方程式</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
