--- a/proc/rateofinfection.html
+++ b/proc/rateofinfection.html
@@ -125,6 +125,7 @@
     <h2>elemental function RateOfInfection(volume)</h2>
     
 
+    <p>1分間あたりの感染確率を計算（もとの資料では1時間あたりの感染確率だが、1分間あたりに換算）</p>
 
     <h3>Arguments</h3>
       <table class="table table-striped varlist">
