--- a/program/sort_test.html
+++ b/program/sort_test.html
@@ -259,7 +259,7 @@
       </ul>
     </div>
 
-    
+    <p>ヒープソートの機能テスト</p>
     <br>
     <div class="panel panel-default">
       <div class="panel-heading">
