--- a/program/translate.html
+++ b/program/translate.html
@@ -242,7 +242,8 @@
       </ul>
     </div>
 
-    
+    <p>全飛沫を、center(x,y)中心にphi[rad]だけ回転させ(z方向には回転しない),全飛沫の中心center(x,y,z)をcenter_translated(X,Y,Z)に移動させるサンプルコード
+ by Hikaru Konishi</p>
     <br>
     <div class="panel panel-default">
       <div class="panel-heading">
