--- a/type/kdtree.html
+++ b/type/kdtree.html
@@ -277,7 +277,8 @@
   <div class="panel-heading codesum"><span class="anchor" id="boundprocedure-search"></span><h3>procedure, public :: <strong>search</strong>  => search_kdTree   </h3></div>
   <ul class="list-group">
       <li class="list-group-item">
-          <h3>private subroutine search_kdTree(self, xyz, droplet_position, nearest_ID)</h3>    
+          <h3>private subroutine search_kdTree(self, xyz, droplet_position, nearest_ID)</h3><p>探索サブルーチン</p>
+    
 <h4>Arguments</h4>      <table class="table table-striped varlist">
 <thead><tr><th>Type</th><th>Intent</th><th>Optional</th><th>Attributes</th><th></th><th>Name</th><th></th></thead>
 <tbody>
