--- a/type/plot3dnodeinfo.html
+++ b/type/plot3dnodeinfo.html
@@ -131,7 +131,7 @@
     
     <div class="col-md-9" id='text'>
       <h2>type, public :: plot3dNodeInfo</h2>
-    
+    <p>節点情報構造体</p>
     <br>
 
     <section class="visible-xs visible-sm hidden-md">
